--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "chai-as-promised": "~6.0.0",
     "cucumber": "~1.3.2",
     "protractor": "^5.1.1",
-    "protractor-cucumber-framework": "^3.0.0"
+    "protractor-cucumber-framework": "^3.0.0",
+    "protractor-simple-cucumber-html-reporter-plugin": "^1.0.2"
   },
   "scripts": {
     "prestart-webdriver": "webdriver-manager update",
